--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,13 @@
 <% if logged_in? %>
   <div class="row">
     <aside class="col-md-4">
-      <class="user_info">
+      <section class="user_info">
         <%= render 'shared/user_info' %>
       </section>
-      <class="micropost_form">
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
+      <section class="micropost_form">
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
